crates/biome_cli/tests/snapshots/main_commands_lint/check_stdin_shows_parse_diagnostics.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --stdin-file-path mock.ts
```

# Input messages

```block

server.get('/', async () => {
	return { hello: 'world' };
});

const = ""; 
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block

server.get('/', async () => {
	return { hello: 'world' };
});

const = ""; 
```

```block
mock.ts:6:7 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an identifier, an array pattern, or an object pattern but instead found '= ""'.
  
    4 │ });
    5 │ 
  > 6 │ const = "";·
      │       ^^^^
  
  i Expected an identifier, an array pattern, or an object pattern here.
  
    4 │ });
    5 │ 
  > 6 │ const = "";·
      │       ^^^^
  

```

```block
mock.ts:6:11 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `,` but instead found `;`
  
    4 │ });
    5 │ 
  > 6 │ const = "";·
      │           ^
  
  i Remove ;
  

```

```block
mock.ts:6:7 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected an identifier, an array pattern, or an object pattern but instead found '= ""'.
  
    4 │ });
    5 │ 
  > 6 │ const = "";·
      │       ^^^^
  
  i Expected an identifier, an array pattern, or an object pattern here.
  
    4 │ });
    5 │ 
  > 6 │ const = "";·
      │       ^^^^
  

```
