crates/biome_cli/tests/snapshots/main_commands_lint/check_stdin_write_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --stdin-file-path mock.js
```

# Input messages

```block
import {a as a} from 'mod'; function f() {return{a}} class Foo {}
```

# Emitted Messages

```block
import {a} from 'mod'; function f() {return{a}} class Foo {}
```

```block
mock.js:1:33 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function f is unused.
  
  > 1 │ import {a} from 'mod'; function f() {return{a}} class Foo {}
      │                                 ^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend f with an underscore.
  
  - import·{a}·from·'mod';·function·f()·{return{a}}·class·Foo·{}
  + import·{a}·from·'mod';·function·_f()·{return{a}}·class·Foo·{}
  

```

```block
mock.js:1:55 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This class Foo is unused.
  
  > 1 │ import {a} from 'mod'; function f() {return{a}} class Foo {}
      │                                                       ^^^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```
