crates/biome_cli/tests/snapshots/main_commands_lint/check_stdin_write_unsafe_successfully.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
function f() {var x=1; return{x}} class Foo {}
```

# Emitted Messages

```block
function _f() {var x=1; return{x}} class Foo {}
```

```block
mock.js:1:42 lint/correctness/noUnusedVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This class Foo is unused.
  
  > 1 │ function _f() {var x=1; return{x}} class Foo {}
      │                                          ^^^
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  

```
