crates/biome_cli/tests/snapshots/main_commands_lint/config_recommended_group.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint check.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": false,
      "correctness": {
        "recommended": true
      }
    }
  }
}
```

## `check.js`

```js
new Symbol("");
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │   "linter": {
       │             ^
   > 3 │     "rules": {
   > 4 │         "recommended": false,
   > 5 │         "correctness": {
   > 6 │             "recommended": true
   > 7 │         }
   > 8 │     }
   > 9 │   }
       │   ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
check.js:1:1 lint/correctness/noInvalidBuiltinInstantiation  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Use Symbol() instead of new Symbol().
  
  > 1 │ new Symbol("");
      │ ^^^^^^^^^^^^^^
  
  i Unsafe fix: Remove new keyword.
  
    1 │ new·Symbol("");
      │ ----           

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
