crates/biome_cli/tests/snapshots/main_commands_lint/deprecated_suppression_comment.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
// rome-ignore lint(suspicious/noDoubleEquals): test
a == b;
```

# Emitted Messages

```block
file.js:1:1 suppressions/deprecatedSuppressionComment  FIXABLE   DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━

  i // rome-ignore is deprecated, use // biome-ignore instead
  
  > 1 │ // rome-ignore lint(suspicious/noDoubleEquals): test
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    2 │ a == b;
  
  i Unsafe fix: Use // biome-ignore instead
  
    1   │ - //·rome-ignore·lint(suspicious/noDoubleEquals):·test
      1 │ + //·biome-ignore·lint(suspicious/noDoubleEquals):·test
    2 2 │   a == b;
  

```

```block
Checked 1 file in <TIME>. No fixes were applied.
```
