crates/biome_cli/tests/snapshots/main_commands_lint/does_error_with_only_infos.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "noDebugger": "info"
      }
    }
  }
}
```

## `file.js`

```js
debugger;
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some information diagnostics were emitted while running checks.
  


```

# Emitted Messages

```block
biome.json:2:13 deserialize  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The use of the recommended field has been deprecated, and will removed in the next major version of Biome. Use preset instead.
  
     1 │ {
   > 2 │   "linter": {
       │             ^
   > 3 │     "rules": {
   > 4 │         "recommended": true,
   > 5 │         "suspicious": {
   > 6 │             "noDebugger": "info"
   > 7 │         }
   > 8 │     }
   > 9 │   }
       │   ^
    10 │ }
  
  i Migrate the configuration with the proper command
  
  $ biome migrate
  

```

```block
file.js:1:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i This is an unexpected use of the debugger statement.
  
  > 1 │ debugger;
      │ ^^^^^^^^^
  
  i Unsafe fix: Remove debugger statement
  
    1 │ debugger;
      │ ---------

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 info.
```
